Updated the index file to use the new path

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <p>Also implemented the TCP protocol and made it posible to set and change nickname and topic of a server.</p>
 
-<p><img src="overview.png" alt=""></p>
+<p><img src="src/overview.png" alt=""></p>
       </section>
     </div>
 
