Renamed the title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="chat-server-and-client" class="anchor" href="#chat-server-and-client" aria-hidden="true"><span class="octicon octicon-link"></span></a>Chat-Server-and-Client</h1>
+<a id="chat-server-and-client" class="anchor" href="#chat-server-and-client" aria-hidden="true"><span class="octicon octicon-link"></span></a>Chat Server & Client</h1>
 
 <p>A chat server and client made in Java</p>
 
